my first html page

--- a/index.html
+++ b/index.html
@@ -2,5 +2,23 @@
 <html>
     <head>
         <title>Lacy M Grimes</title>
+        <body>
+        <h1>The Webpage of Lacy M Grimes</h1>
+        <h2>The beginning of my story as a Junior Developer</h2>
+        <h3> About Me</h3>
+        <p> A Texan living in the most overcast part of the UK; an Ecologist building high rise apartments. 
+            Some things about my life seem a bit out of place, to say the least. 
+            But one thing that feels right is creating tools that make other's lives easier - something I'm great at doing in existing programmes such as Excel.
+            Soon, I hope to be building my own programmes! My life before moving to the UK is a blur of sunshine, hot rods, and horses.
+            Almost a decade ago, I made the journey to the UK where I studied Ecology and Conservation at university whilst raising my daughter. 
+            When I'm not working or doing mom things, I love to paint, watch horror movies (Bruce Campbell is my favorite actor of all time), and be in the woods.
+         </p>
+         <p>I have been code-curious for several years now and this has been born partly of frustration. I'm really big on efficiency and can't cope with tasks that waste time, so pretty much every job I've been in I've used programmes like Excel to make things quicker and easier for myself and my team.
+             I love finding software that solves problems for people (developers really are super clever!), and have procured and rolled out several such programmes at my current company.
+            I get frustrated with the workbooks I've created, I constantly think about all the things I want the programme to do but don't know how to make it happen.
+        I crave having the skills to solve these frustrations and create my own programmes. I want someone else like me to find MY software, and say 'Wow, that is going to make our job so much easier!'
+    So here I am at Manchester Codes, starting my journey in Software Development. Full disclosure: A pay rise wouldn't hurt, either! </p>
+     
+</body>
     </head>
 </html>
