semantic markup added

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Lacy M Grimes</title>
-        <body>
+        <body><header>
         <h1>The Webpage of Lacy M Grimes</h1>
-        <h2>The beginning of my story as a Junior Developer</h2>
-        <h3> About Me</h3>
+        <h2>The beginning of my story as a Junior Developer</h2></header>
+        <main><section><h3> About Me</h3> </body>
         <p> A Texan living in the most overcast part of the UK; an Ecologist building high rise apartments. 
             Some things about my life seem a bit out of place, to say the least. 
             But one thing that feels right is creating tools that make other's lives easier - something I'm great at doing in existing programmes such as Excel.
@@ -17,8 +17,8 @@
              I love finding software that solves problems for people (developers really are super clever!), and have procured and rolled out several such programmes at my current company.
             I get frustrated with the workbooks I've created, I constantly think about all the things I want the programme to do but don't know how to make it happen.
         I crave having the skills to solve these frustrations and create my own programmes. I want someone else like me to find MY software, and say 'Wow, that is going to make our job so much easier!'
-    So here I am at Manchester Codes, starting my journey in Software Development. Full disclosure: A pay rise wouldn't hurt, either! </p>
-     
+    So here I am at Manchester Codes, starting my journey in Software Development.</p> <p>Full disclosure: A pay rise wouldn't hurt, either! </p></section></main> 
+     <footer>2022 Lacy Grimes</footer>
 </body>
     </head>
 </html>
