and then there were lists

--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
             I get frustrated with the workbooks I've created, I constantly think about all the things I want the programme to do but don't know how to make it happen.
         I crave having the skills to solve these frustrations and create my own programmes. I want someone else like me to find MY software, and say 'Wow, that is going to make our job so much easier!'
     So here I am at Manchester Codes, starting my journey in Software Development.</p> <p>Full disclosure: A pay rise wouldn't hurt, either! </p></section></main> 
-     <footer>2022 Lacy Grimes</footer>
+    <section><h2>Qualities</h2>
+    <ol>
+        <li>Problem Solver</li>
+        <li>Generally a nice person</li>
+        <li>Helpful</li>
+    </ol></section>
+    <section><h2>Hobbies & Interests</h2>
+    <ul>
+        <li>Painting (furniture, canvas, walls, you name it- I'll paint it)</li>
+        <li>Science</li>
+        <li>Bruce Campbell movies</li>
+        <li>Being in the woods</li>
+        <li>Cars</li>
+    </ul></section>
+    <footer>2022 Lacy Grimes</footer>
 </body>
     </head>
 </html>
