--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>Lacy M Grimes</title>
-        <body><header>
-        <h1>The Webpage of Lacy M Grimes</h1>
-        <h2>The beginning of my story as a Junior Developer</h2></header>
+        <body><header><nav><a href="./pages/contact.html" target="_blank">Contact Me</a>
+            <a href="./pages/projects.html" target="_blank">Projects</a></nav>
+        <h1>Lacy M. Grimes</h1>
+        <h2>Junior Developer</h2></header>
         <main><section><h3> About Me</h3> </body>
         <p> A Texan living in the most overcast part of the UK; an Ecologist building high rise apartments. 
             Some things about my life seem a bit out of place, to say the least. 
