--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html>
     <head>
         <title>Lacy M Grimes</title>
-        <body><header><nav><a href="./pages/contact.html" target="_blank">Contact Me</a>
+        <body>
+            <header>
+                
+                <nav><a href="./pages/contact.html" target="_blank">Contact Me</a>
             <a href="./pages/projects.html" target="_blank">Projects</a></nav>
+    
         <h1>Lacy M. Grimes</h1>
-        <h2>Junior Developer</h2></header>
-        <main><section><h3> About Me</h3> </body>
+        <h2>Junior Developer</h2>
+    <figure>
+        <img src="images/lacy-headshot.jpg" alt="Photo of Lacy Grimes">
+    </figure>
+    </header>
+
+        <main>
+            <section>
+                <h3> About Me</h3> 
+            </body>
         <p> A Texan living in the most overcast part of the UK; an Ecologist building high rise apartments. 
             Some things about my life seem a bit out of place, to say the least. 
             But one thing that feels right is creating tools that make other's lives easier - something I'm great at doing in existing programmes such as Excel.
@@ -14,17 +26,40 @@
             Almost a decade ago, I made the journey to the UK where I studied Ecology and Conservation at university whilst raising my daughter. 
             When I'm not working or doing mom things, I love to paint, watch horror movies (Bruce Campbell is my favorite actor of all time), and be in the woods.
          </p>
+         <figure>
+             <img src="images/in-houston.jpeg" alt="Photograph of Lacy and family in Houston">
+             <br />
+             <figcaption>
+                 Me with my brother and daughter in Houston, Texas.
+             </figcaption>
+         </figure>
+         <figure>
+             <img src="images/lacy-at-work.jpg" alt="Photograph of Women working in Construction">
+             <br />
+             <figcaption>
+                 Me working with my amazing colleagues on site in Manchester.
+             </figcaption>
+         </figure>
          <p>I have been code-curious for several years now and this has been born partly of frustration. I'm really big on efficiency and can't cope with tasks that waste time, so pretty much every job I've been in I've used programmes like Excel to make things quicker and easier for myself and my team.
              I love finding software that solves problems for people (developers really are super clever!), and have procured and rolled out several such programmes at my current company.
             I get frustrated with the workbooks I've created, I constantly think about all the things I want the programme to do but don't know how to make it happen.
         I crave having the skills to solve these frustrations and create my own programmes. I want someone else like me to find MY software, and say 'Wow, that is going to make our job so much easier!'
     So here I am at Manchester Codes, starting my journey in Software Development.</p> <p>Full disclosure: A pay rise wouldn't hurt, either! </p></section></main> 
-    <section><h2>Qualities</h2>
+    <figure>
+        <img src="images/Peppa.jpg" alt="Photograph of Lacy's dog Peppa">
+        <br />
+        <figcaption>
+            My dog Peppa. She is more of a pig really.
+        </figcaption>
+    </figure>
+    <section>
+        <h2>Qualities</h2>
     <ol>
         <li>Problem Solver</li>
         <li>Generally a nice person</li>
         <li>Helpful</li>
     </ol></section>
+
     <section><h2>Hobbies & Interests</h2>
     <ul>
         <li>Painting (furniture, canvas, walls, you name it- I'll paint it)</li>
