contact page form added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,5 +5,39 @@
     </head>
     <body>
         <h1>How to get in touch</h1>
+
+        <main>
+            <section>
+                <h2>
+                    If you would like to speak more, please fill in the below form.
+                </h2>
+                <fieldset>
+                    <legend>Your Details:</legend>
+                    <label>
+                        Name:
+                        <input type="text" name="name">
+                    
+                    </label>
+                    <label>
+                        Email:
+                        <input type="text" name="email">
+                    </label>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Why are you getting in touch?</legend>
+                    <select name="Main Reason">
+                        <option value="justachat" selected>Just fancy a chat</option>
+                        <option value="sharewisdom" selected>To share my wisdom</option>
+                        <option value="worktogether" selected>I want to work together</option>
+
+                    </select>
+                    <br>
+                <p>Go on then, what have you got to say?</p>
+                <br>
+                    <textarea name="message" rows="10" cols="30">Don't be shy! :-)</textarea>
+                </fieldset>
+            </section>
+        </main>
     </body>
 </html>
