--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,6 +4,24 @@
         <title> Projects</title>
     </head>
     <body>
-        <h1>My Projects</h1>
+        <h1>Check out some of my work...</h1>
+        <section>
+            <h2>Projects</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Image</th>
+                        <th>About</th>
+                    </tr>
+                </thead>
+                <tr>
+                     <td>DoT</td>
+                    <td> <img src="/images/paint-rollers.jpg" alt="Image of Paint Rollers"> </td>
+                    <td>A tracking, management and reporting tool for construction fit out works.</td>
+                    </tr>
+
+            </table>
+        </section>
     </body>
 </html>
